--- a/assets/css/sub.css
+++ b/assets/css/sub.css
@@ -2,107 +2,150 @@
 .gotham {
   font-family: 'Gotham', sans-serif; }
 
-.lato, .content section .section-header p {
+.lato, .content .page-header p {
   font-family: 'Lato', sans-serif; }
 
 .content {
   padding-bottom: 68px;
-  background-color: #f3f3f3; }
-  .content section {
-    background-image: url(/assets/images/sub/sub_visual01.jpg);
-    background-repeat: no-repeat;
-    background-position: 50% 0; }
-    .content section .section-header {
-      text-align: center;
-      padding: 54px 0; }
-      .content section .section-header h2 {
-        font-size: 50px;
-        color: #fff;
-        font-weight: bold;
-        letter-spacing: -1px;
-        vertical-align: top; }
-      .content section .section-header hr {
-        width: 37px;
-        border-top: 2px solid #fff;
-        display: block;
-        margin: 23px auto 20px; }
-      .content section .section-header p {
-        font-size: 16px;
-        color: #fff;
-        font-weight: bold;
-        line-height: 22px; }
-    .content section .section-content {
-      max-width: 1260px;
-      min-height: 600px;
-      padding: 30px 0;
-      margin: 0 auto;
-      background-color: #fff; }
-      .content section .section-content h3 {
-        margin: 60px 0;
-        font-size: 42px;
-        color: #333;
-        font-weight: 400; }
-      .content section .section-content .page-path {
-        width: 100%;
-        height: 40px;
-        border: 1px solid #ccc; }
-        .content section .section-content .page-path > ul > li {
-          float: left; }
-          .content section .section-content .page-path > ul > li:nth-of-type(2) a {
-            display: inline-block;
-            width: 130px;
-            height: 38px;
-            text-align: left;
-            font-size: 14px;
-            font-weight: 400;
-            color: #333;
-            padding: 9px 0;
-            padding-left: 20px;
-            border-right: 1px solid #ccc; }
-            .content section .section-content .page-path > ul > li:nth-of-type(2) a:hover, .content section .section-content .page-path > ul > li:nth-of-type(2) a:focus {
-              text-decoration: none; }
-        .content section .section-content .page-path > ul .home {
+  background-color: #f3f3f3;
+  background-image: url(/assets/images/sub/sub_visual01.jpg);
+  background-repeat: no-repeat;
+  background-position: 50% 0; }
+  .content .page-header {
+    text-align: center;
+    padding: 54px 0;
+    margin: 0;
+    border: 0; }
+    .content .page-header h2 {
+      font-size: 50px;
+      color: #fff;
+      font-weight: bold;
+      letter-spacing: -1px;
+      vertical-align: top; }
+      @media (max-width: 768px) {
+        .content .page-header h2 {
+          font-size: 26px; } }
+    .content .page-header hr {
+      width: 37px;
+      border-top: 2px solid #fff;
+      display: block;
+      margin: 23px auto 20px; }
+    .content .page-header p {
+      font-size: 16px;
+      color: #fff;
+      font-weight: bold;
+      line-height: 22px; }
+      @media (max-width: 768px) {
+        .content .page-header p {
+          font-size: 12px;
+          line-height: 16px; } }
+  .content .page-content {
+    max-width: 1260px;
+    padding: 30px 0;
+    margin: 0 auto;
+    background-color: #fff; }
+    @media (max-width: 768px) {
+      .content .page-content {
+        padding: 20px 0; } }
+    .content .page-content section .page-path {
+      width: 100%;
+      height: 40px;
+      border: 1px solid #ccc; }
+      @media (max-width: 768px) {
+        .content .page-content section .page-path {
+          height: 30px; } }
+      .content .page-content section .page-path > ul > li {
+        float: left; }
+        .content .page-content section .page-path > ul > li:nth-of-type(2) a {
+          display: inline-block;
+          width: 130px;
+          height: 38px;
+          text-align: left;
+          font-size: 14px;
+          font-weight: 400;
+          color: #333;
+          padding: 9px 0;
+          padding-left: 20px;
           border-right: 1px solid #ccc; }
-          .content section .section-content .page-path > ul .home a {
+          .content .page-content section .page-path > ul > li:nth-of-type(2) a:hover, .content .page-content section .page-path > ul > li:nth-of-type(2) a:focus {
+            text-decoration: none; }
+          @media (max-width: 768px) {
+            .content .page-content section .page-path > ul > li:nth-of-type(2) a {
+              height: 28px;
+              font-size: 13px;
+              padding: 5px 0;
+              padding-left: 15px;
+              width: 100px; } }
+      .content .page-content section .page-path > ul .home {
+        border-right: 1px solid #ccc; }
+        .content .page-content section .page-path > ul .home a {
+          display: block;
+          width: 39px;
+          height: 38px; }
+          .content .page-content section .page-path > ul .home a span {
             display: block;
             width: 39px;
-            height: 38px; }
-            .content section .section-content .page-path > ul .home a span {
-              display: block;
-              width: 39px;
-              height: 38px;
-              background-image: url(/assets/images/sub/home_btn.png);
-              background-repeat: no-repeat;
-              background-position: 50% 11px; }
-        .content section .section-content .page-path > ul .dropdown {
-          border-right: 1px solid #ccc; }
-          .content section .section-content .page-path > ul .dropdown .btn {
-            width: 195px;
             height: 38px;
-            text-align: left;
-            font-size: 14px;
-            color: #333;
-            padding: 8px 20px 8px 20px;
-            border: 0; }
-            .content section .section-content .page-path > ul .dropdown .btn:hover, .content section .section-content .page-path > ul .dropdown .btn:focus {
-              box-shadow: none;
-              opacity: 1;
-              background-color: #fff; }
-            .content section .section-content .page-path > ul .dropdown .btn span {
-              float: right;
+            background-image: url(/assets/images/sub/home_btn.png);
+            background-repeat: no-repeat;
+            background-position: 50% 11px; }
+      .content .page-content section .page-path > ul .dropdown {
+        border-right: 1px solid #ccc; }
+        .content .page-content section .page-path > ul .dropdown .btn {
+          width: 195px;
+          height: 38px;
+          text-align: left;
+          font-size: 14px;
+          color: #333;
+          padding: 8px 20px 8px 20px;
+          border: 0; }
+          .content .page-content section .page-path > ul .dropdown .btn:hover, .content .page-content section .page-path > ul .dropdown .btn:focus {
+            box-shadow: none;
+            opacity: 1;
+            background-color: #fff; }
+          @media (max-width: 768px) {
+            .content .page-content section .page-path > ul .dropdown .btn {
+              width: 130px;
+              height: 28px;
               font-size: 13px;
-              color: #777;
-              margin-top: 2px; }
-          .content section .section-content .page-path > ul .dropdown .dropdown-menu {
-            width: 197px;
-            border-radius: 0;
-            margin-left: -1px;
-            border-color: #ccc; }
-            .content section .section-content .page-path > ul .dropdown .dropdown-menu li {
-              font-size: 14px;
-              color: #333; }
-              .content section .section-content .page-path > ul .dropdown .dropdown-menu li a {
-                line-height: 26px; }
+              padding: 5px 0;
+              padding-left: 15px;
+              padding-right: 10px; } }
+          .content .page-content section .page-path > ul .dropdown .btn span {
+            float: right;
+            font-size: 13px;
+            color: #777;
+            margin-top: 2px; }
+        .content .page-content section .page-path > ul .dropdown .dropdown-menu {
+          width: 197px;
+          border-radius: 0;
+          margin: 0;
+          margin-left: -1px;
+          border-color: #ccc; }
+          @media (max-width: 768px) {
+            .content .page-content section .page-path > ul .dropdown .dropdown-menu {
+              width: 132px !important;
+              padding: 0 !important; } }
+          .content .page-content section .page-path > ul .dropdown .dropdown-menu li {
+            font-size: 14px;
+            color: #333; }
+            @media (max-width: 768px) {
+              .content .page-content section .page-path > ul .dropdown .dropdown-menu li {
+                font-size: 12px; } }
+            .content .page-content section .page-path > ul .dropdown .dropdown-menu li a {
+              line-height: 26px; }
+              @media (max-width: 768px) {
+                .content .page-content section .page-path > ul .dropdown .dropdown-menu li a {
+                  line-height: 16px; } }
+    .content .page-content section .section-header h3 {
+      margin: 60px 0;
+      font-size: 42px;
+      color: #333;
+      font-weight: 400; }
+      @media (max-width: 768px) {
+        .content .page-content section .section-header h3 {
+          font-size: 22px;
+          margin: 30px 0 20px; } }
 
 .civil-construction li a {
   display: inline-block;
