--- a/assets/css/sub.scss
+++ b/assets/css/sub.scss
@@ -2,50 +2,58 @@
 .content {
     padding-bottom: 68px;
     background-color: #f3f3f3;
-    section {
-        background-image: url(/assets/images/sub/sub_visual01.jpg);
-        background-repeat: no-repeat;
-        background-position: 50% 0;
-        .section-header {
-            text-align: center;
-            padding: 54px 0;
-            h2 {
-                font-size: 50px;
-                color: #fff;
-                font-weight: bold;
-                letter-spacing: -1px;
-                vertical-align: top;
-            }
-            hr {
-                width: 37px;
-                border-top: 2px solid #fff;
-                display: block;
-                margin: 23px auto 20px;
-            }
-            p {
-                font-size: 16px;
-                color: #fff;
-                font-weight: bold;
-                line-height: 22px;
-                @extend .lato;
+    background-image: url(/assets/images/sub/sub_visual01.jpg);
+    background-repeat: no-repeat;
+    background-position: 50% 0;
+    .page-header {
+        text-align: center;
+        padding: 54px 0;
+        margin: 0;
+        border: 0;
+        h2 {
+            font-size: 50px;
+            color: #fff;
+            font-weight: bold;
+            letter-spacing: -1px;
+            vertical-align: top;
+            @media (max-width: $sm) {
+                font-size: 26px;
             }
         }
-        .section-content {
-            max-width: 1260px;
-            min-height: 600px;
-            padding: 30px 0;
-            margin: 0 auto;
-            background-color: #fff;
-            h3 {
-                margin: 60px 0;
-                font-size: 42px;
-                color: #333;
-                font-weight: 400;
+        hr {
+            width: 37px;
+            border-top: 2px solid #fff;
+            display: block;
+            margin: 23px auto 20px;
+        }
+        p {
+            font-size: 16px;
+            color: #fff;
+            font-weight: bold;
+            line-height: 22px;
+            @extend .lato;
+            @media (max-width: $sm) {
+                font-size: 12px;
+                line-height: 16px;
             }
+        }
+    }
+    .page-content {
+        max-width: 1260px;
+        padding: 30px 0;
+        margin: 0 auto;
+        background-color: #fff;
+        @media (max-width: $sm) {
+            padding: 20px 0;
+        }
+        section {
             .page-path {
                 width: 100%;
                 height: 40px;
                 border: 1px solid #ccc;
+                @media (max-width: $sm) {
+                    height: 30px;
+                }
                 > ul {
                     > li {
                         float: left;
@@ -64,6 +72,13 @@
                                 &:hover,
                                 &:focus {
                                     text-decoration: none;
+                                }
+                                @media (max-width: $sm) {
+                                    height: 28px;
+                                    font-size: 13px;
+                                    padding: 5px 0;
+                                    padding-left: 15px;
+                                    width: 100px;
                                 }
                             }
                         }
@@ -100,6 +115,14 @@
                                 opacity: 1;
                                 background-color: #fff;
                             }
+                            @media (max-width: $sm) {
+                                width: 130px;
+                                height: 28px;
+                                font-size: 13px;
+                                padding: 5px 0;
+                                padding-left: 15px;
+                                padding-right: 10px;
+                            }
                             span {
                                 float: right;
                                 font-size: 13px;
@@ -110,16 +133,39 @@
                         .dropdown-menu {
                             width: 197px;
                             border-radius: 0;
+                            margin: 0;
                             margin-left: -1px;
                             border-color: #ccc;
+                            @media (max-width: $sm) {
+                                width: 132px !important;
+                                padding: 0 !important;
+                            }
                             li {
                                 font-size: 14px;
                                 color: #333;
+                                @media (max-width: $sm) {
+                                    font-size: 12px;
+                                }
                                 a {
                                     line-height: 26px;
+                                    @media (max-width: $sm) {
+                                        line-height: 16px;
+                                    }
                                 }
                             }
                         }
+                    }
+                }
+            }
+            .section-header {
+                h3 {
+                    margin: 60px 0;
+                    font-size: 42px;
+                    color: #333;
+                    font-weight: 400;
+                    @media (max-width: $sm) {
+                        font-size: 22px;
+                        margin: 30px 0 20px;
                     }
                 }
             }
