--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -47,13 +47,13 @@ label {
 
 .container,
 .container-fluid {
-  max-width: 1200px;
+  max-width: 1200px !important;
   padding-left: 10px;
   padding-right: 10px; }
   .container .row,
   .container-fluid .row {
-    margin-left: -5px !important;
-    margin-right: -5px !important; }
+    margin-left: -5px;
+    margin-right: -5px; }
     .container .row .col-xs-1,
     .container .row .col-sm-1,
     .container .row .col-md-1,
@@ -177,6 +177,7 @@ label {
   @media (min-width: 1200px) {
     .container,
     .container-fluid {
+      width: 1200px;
       padding-left: 15px;
       padding-right: 15px; }
       .container .row,
