--- a/assets/css/introduce.css
+++ b/assets/css/introduce.css
@@ -1,3 +1,4 @@
+@charset "UTF-8";
 @import "https://fonts.googleapis.com/css?family=Lato:300,400,700";
 .gotham, .ceo-greetings .section-content .greetings h4 {
   font-family: 'Gotham', sans-serif; }
@@ -200,5 +201,279 @@
       @media (max-width: 320px) {
         .group .section-content .group-table-img img {
           width: 300px; } }
+
+.location {
+  padding-bottom: 40px; }
+  @media (max-width: 992px) {
+    .location {
+      padding-bottom: 0; } }
+  .location .section-content .maps {
+    text-align: center;
+    margin-bottom: 30px; }
+    .location .section-content .maps img {
+      display: inline-block; }
+  .location .section-content .inquiry-info li {
+    border-right: 1px solid #ccc; }
+    .location .section-content .inquiry-info li:last-child {
+      border: 0; }
+    @media (max-width: 992px) {
+      .location .section-content .inquiry-info li {
+        text-align: center;
+        border-right: 0;
+        border-bottom: 1px solid #ccc;
+        padding-bottom: 20px;
+        margin-bottom: 30px; }
+        .location .section-content .inquiry-info li:last-child {
+          padding-bottom: 0;
+          margin-bottom: 0; } }
+    .location .section-content .inquiry-info li div h4 {
+      font-size: 24px;
+      color: #333;
+      font-weight: 400;
+      text-align: center;
+      margin-bottom: 15px;
+      padding-top: 67px; }
+      @media (max-width: 768px) {
+        .location .section-content .inquiry-info li div h4 {
+          font-size: 18px;
+          margin-bottom: 10px; } }
+    .location .section-content .inquiry-info li div dl {
+      overflow: hidden; }
+      @media (max-width: 992px) {
+        .location .section-content .inquiry-info li div dl {
+          display: inline-block;
+          padding-left: 0 !important;
+          text-align: left; } }
+      .location .section-content .inquiry-info li div dl dt {
+        float: left;
+        clear: both;
+        font-size: 16px;
+        color: #333;
+        line-height: 29px;
+        font-weight: 400px; }
+        @media (max-width: 768px) {
+          .location .section-content .inquiry-info li div dl dt {
+            font-size: 13px;
+            line-height: 20px; } }
+      .location .section-content .inquiry-info li div dl dd {
+        float: left;
+        font-size: 16px;
+        color: #6b6b6b;
+        line-height: 29px;
+        font-weight: 400px; }
+        @media (max-width: 768px) {
+          .location .section-content .inquiry-info li div dl dd {
+            font-size: 13px;
+            line-height: 18px; } }
+    .location .section-content .inquiry-info li .office h4 {
+      background-image: url(/assets/images/introduce/inquiry_img01.png);
+      background-repeat: no-repeat;
+      background-position: 50% 0; }
+    .location .section-content .inquiry-info li .office dl {
+      padding-left: 48px; }
+      @media (max-width: 1200px) {
+        .location .section-content .inquiry-info li .office dl {
+          padding-left: 15px; } }
+      .location .section-content .inquiry-info li .office dl dt {
+        width: 70px; }
+    .location .section-content .inquiry-info li .call-center h4 {
+      background-image: url(/assets/images/introduce/inquiry_img02.png);
+      background-repeat: no-repeat;
+      background-position: 50% 0; }
+    .location .section-content .inquiry-info li .call-center dl {
+      padding-left: 90px; }
+      @media (max-width: 1200px) {
+        .location .section-content .inquiry-info li .call-center dl {
+          padding-left: 60px; } }
+      .location .section-content .inquiry-info li .call-center dl dt {
+        width: 57px; }
+    .location .section-content .inquiry-info li .email-inquiry h4 {
+      background-image: url(/assets/images/introduce/inquiry_img03.png);
+      background-repeat: no-repeat;
+      background-position: 50% 0; }
+    .location .section-content .inquiry-info li .email-inquiry dl {
+      padding-left: 65px; }
+      @media (max-width: 1200px) {
+        .location .section-content .inquiry-info li .email-inquiry dl {
+          padding-left: 45px; } }
+      .location .section-content .inquiry-info li .email-inquiry dl dt {
+        width: 77px; }
+
+.history {
+  padding-bottom: 40px; }
+@midea (max-width: $md) {
+  .history {
+    padding-bottom: 0; } }
+  .history .section-content .geumdo-history .present h4 {
+    width: 100%;
+    font-size: 30px;
+    color: #d90c1c;
+    font-weight: 300;
+    padding-top: 29px;
+    border-top: 2px solid #d90c1c; }
+    @media (max-width: 992px) {
+      .history .section-content .geumdo-history .present h4 {
+        font-size: 18px;
+        padding-top: 20px; } }
+  .history .section-content .geumdo-history .present .present-dl {
+    border-top: 2px solid #333; }
+    @media (max-width: 992px) {
+      .history .section-content .geumdo-history .present .present-dl {
+        border-top: 0; } }
+  .history .section-content .geumdo-history .present dl {
+    overflow: hidden;
+    padding: 29px 0;
+    margin-left: -25px;
+    border-bottom: 1px dotted #ccc; }
+    .history .section-content .geumdo-history .present dl:last-child {
+      border-bottom: 0; }
+    @media (max-width: 1200px) {
+      .history .section-content .geumdo-history .present dl {
+        margin-left: -5px; } }
+    @media (max-width: 992px) {
+      .history .section-content .geumdo-history .present dl {
+        margin-left: 0;
+        padding: 20px 0; } }
+    .history .section-content .geumdo-history .present dl dt {
+      float: left;
+      clear: both;
+      width: 60px;
+      font-size: 16px;
+      color: #333;
+      font-weight: 400;
+      vertical-align: top; }
+      @media (max-width: 992px) {
+        .history .section-content .geumdo-history .present dl dt {
+          font-size: 13px; } }
+      .history .section-content .geumdo-history .present dl dt:before {
+        content: "·";
+        margin-top: -5px;
+        font-size: 13px;
+        color: #333; }
+    .history .section-content .geumdo-history .present dl dd {
+      float: left; }
+      .history .section-content .geumdo-history .present dl dd ol li:last-child {
+        margin-bottom: 0; }
+      .history .section-content .geumdo-history .present dl dd ol li h5 {
+        display: inline-block;
+        width: 55px;
+        font-size: 16px;
+        color: #333;
+        font-weight: 400;
+        vertical-align: top;
+        margin-top: 3px; }
+        @media (max-width: 992px) {
+          .history .section-content .geumdo-history .present dl dd ol li h5 {
+            font-size: 13px;
+            margin-top: 2px; } }
+      .history .section-content .geumdo-history .present dl dd ol li p {
+        display: inline-block;
+        font-size: 16px;
+        color: #6c6c6c;
+        font-weight: 400;
+        line-height: 29px;
+        margin-top: -2px;
+        letter-spacing: -1px; }
+        @media (max-width: 992px) {
+          .history .section-content .geumdo-history .present dl dd ol li p {
+            font-size: 13px;
+            line-height: 22px; } }
+  .history .section-content .geumdo-history .history-info {
+    border-top: 1px solid #dadada; }
+    .history .section-content .geumdo-history .history-info:last-child {
+      border-bottom: 1px solid #dadada; }
+    .history .section-content .geumdo-history .history-info h4 {
+      width: 100%;
+      font-size: 30px;
+      color: #d90c1c;
+      font-weight: 300;
+      padding-top: 29px; }
+      @media (max-width: 992px) {
+        .history .section-content .geumdo-history .history-info h4 {
+          font-size: 18px;
+          padding-top: 20px; } }
+    .history .section-content .geumdo-history .history-info dl {
+      overflow: hidden;
+      padding: 29px 0;
+      margin-left: -25px;
+      border-bottom: 1px dotted #ccc; }
+      .history .section-content .geumdo-history .history-info dl:last-child {
+        border-bottom: 0; }
+      @media (max-width: 1200px) {
+        .history .section-content .geumdo-history .history-info dl {
+          margin-left: -5px; } }
+      @media (max-width: 992px) {
+        .history .section-content .geumdo-history .history-info dl {
+          margin-left: 0;
+          padding: 20px 0; } }
+      .history .section-content .geumdo-history .history-info dl dt {
+        float: left;
+        clear: both;
+        width: 60px;
+        font-size: 16px;
+        color: #333;
+        font-weight: 400;
+        vertical-align: top; }
+        @media (max-width: 992px) {
+          .history .section-content .geumdo-history .history-info dl dt {
+            font-size: 13px; } }
+        .history .section-content .geumdo-history .history-info dl dt:before {
+          content: "·";
+          margin-top: -5px;
+          font-size: 13px;
+          color: #333; }
+      .history .section-content .geumdo-history .history-info dl dd {
+        float: left; }
+        .history .section-content .geumdo-history .history-info dl dd ol li:last-child {
+          margin-bottom: 0; }
+        .history .section-content .geumdo-history .history-info dl dd ol li h5 {
+          display: inline-block;
+          width: 55px;
+          font-size: 16px;
+          color: #333;
+          font-weight: 400;
+          vertical-align: top;
+          margin-top: 3px; }
+          @media (max-width: 992px) {
+            .history .section-content .geumdo-history .history-info dl dd ol li h5 {
+              font-size: 13px;
+              margin-top: 2px; } }
+        .history .section-content .geumdo-history .history-info dl dd ol li p {
+          display: inline-block;
+          font-size: 16px;
+          color: #6c6c6c;
+          font-weight: 400;
+          line-height: 29px;
+          margin-top: -2px;
+          letter-spacing: -1px; }
+          @media (max-width: 992px) {
+            .history .section-content .geumdo-history .history-info dl dd ol li p {
+              font-size: 13px;
+              line-height: 22px; } }
+  .history .section-content .geumdo-history .challenge {
+    text-align: center; }
+    .history .section-content .geumdo-history .challenge p {
+      font-size: 24px;
+      color: #333;
+      line-height: 35px;
+      font-weight: 400;
+      text-align: left;
+      margin-bottom: 50px;
+      margin-top: -10px; }
+      @media (max-width: 1200px) {
+        .history .section-content .geumdo-history .challenge p {
+          font-size: 24px;
+          margin-top: 30px;
+          margin-bottom: 30px; } }
+      @media (max-width: 992px) {
+        .history .section-content .geumdo-history .challenge p {
+          font-size: 18px; } }
+    .history .section-content .geumdo-history .challenge span {
+      display: block; }
+      @media (max-width: 768px) {
+        .history .section-content .geumdo-history .challenge span {
+          padding: 0 30px; } }
+      .history .section-content .geumdo-history .challenge span img {
+        display: inline-block; }
 
 /*# sourceMappingURL=introduce.css.map */
