--- a/assets/css/sub.css
+++ b/assets/css/sub.css
@@ -11,6 +11,9 @@
   background-image: url(/assets/images/sub/sub_visual01.jpg);
   background-repeat: no-repeat;
   background-position: 50% 0; }
+  @media (max-width: 992px) {
+    .content {
+      background-position: 50% -50px; } }
   .content .page-header {
     text-align: center;
     padding: 54px 0;
