--- a/assets/css/promotion.scss
+++ b/assets/css/promotion.scss
@@ -28,3 +28,184 @@
         }
     }
 }
+.partner {
+    padding-bottom: 40px;
+    @media (max-width: $sm) {
+        padding-bottom: 0;
+    }
+    .partner-relative {
+        h4 {
+            font-size: 24px;
+            color: #333;
+            padding-left: 30px;
+            border-left: 4px solid $rc;
+            margin-bottom: 20px;
+            @media (max-width: $sm) {
+                font-size: 18px;
+                margin-bottom: 15px;
+                padding-left: 15px;
+                border-left: 2px solid $rc;
+            }
+        }
+        .partner-info {
+            margin-bottom: 70px;
+            @media (max-width: $md) {
+                margin-bottom: 40px;
+            }
+            &:last-child {
+                margin-bottom: 0;
+            }
+            .table-wrap {
+                @media (max-width: $md) {
+                    margin-bottom: 30px;
+                }
+                .table {
+                    margin-bottom: 0;
+                    border: 0;
+                    border-top: 3px solid #333;
+                    @media(max-width: $sm) {
+                        border-top: 2px solid #333;
+                    }
+                    tbody {
+                        tr {
+                            th {
+                                font-size: 16px;
+                                color: #333;
+                                text-align: center;
+                                font-weight: 400;
+                                vertical-align: middle;
+                                border-left: 0;
+                                border-right: 0;
+                                border-color: #bbb;
+                                background-color: #fafafa;
+                                @media(max-width: $sm) {
+                                    font-size: 12px;
+                                }
+                            }
+                            td {
+                                font-size: 16px;
+                                color: #6c6c6c;
+                                padding: 10px 23px;
+                                border-right: 0;
+                                vertical-align: middle;
+                                border-color: #bbb;
+                                @media(max-width: $sm) {
+                                    font-size: 12px;
+                                    padding: 5px;
+                                    letter-spacing: -1px;
+                                }
+                            }
+                            .tx-align {
+                                text-align: center;
+                            }
+                            .str {
+                                color: #333;
+                                font-weight: 400;
+                            }
+                        }
+                    }
+                }
+            }
+            .bx-wrapper {
+                .bx-viewport {
+                    .bxslider {
+                        li {
+                            img {
+                                width: 100%;
+                            }
+                        }
+                    }
+                }
+            }
+            .bx-pager-img {
+                margin-top: 14px;
+                a {
+                    display: inline-block !important;
+                    width: 90px;
+                    height: 56px;
+                    margin-right: 6px;
+                    border: 2px solid #fff;
+                    &:last-child {
+                        margin-right: 0;
+                    }
+                    &:focus {
+                        border: 2px solid $rc;
+                    }
+                    img {
+                        width: 86px;
+                        height: 52px;
+                    }
+                }
+            }
+            .bx-wrapper {
+                .bx-viewport {
+                    .bxslider-2 {
+                        li {
+                            img {
+                                width: 100%;
+                            }
+                        }
+                    }
+                }
+            }
+            .bx-pager-img-2 {
+                margin-top: 14px;
+                a {
+                    display: inline-block !important;
+                    width: 90px;
+                    height: 56px;
+                    margin-right: 6px;
+                    border: 2px solid #fff;
+                    &:last-child {
+                        margin-right: 0;
+                    }
+                    &:focus {
+                        border: 2px solid $rc;
+                    }
+                    img {
+                        width: 86px;
+                        height: 52px;
+                    }
+                }
+            }
+        }
+    }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
