--- a/assets/css/default.css
+++ b/assets/css/default.css
@@ -470,14 +470,12 @@ select.form-control {
               background-image: url(/assets/images/main/bar_btn.png);
               background-repeat: no-repeat;
               background-position: 0 0; }
-        #header #gnb .wrapper .container > .lg-menu {
-          float: right;
-          margin-left: -15px;
-          margin-right: -15px; }
-          #header #gnb .wrapper .container > .lg-menu > li {
+        #header #gnb .wrapper .container > .menu-list {
+          float: right; }
+          #header #gnb .wrapper .container > .menu-list > li {
             float: left;
             width: 162px; }
-            #header #gnb .wrapper .container > .lg-menu > li > a {
+            #header #gnb .wrapper .container > .menu-list > li > a {
               display: block;
               font-size: 18px;
               color: #222;
@@ -485,27 +483,121 @@ select.form-control {
               text-align: center;
               line-height: 91px;
               text-decoration: none; }
-            #header #gnb .wrapper .container > .lg-menu > li > ul {
+            #header #gnb .wrapper .container > .menu-list > li > ul {
               display: none;
               position: relative;
               min-height: 210px;
               padding-top: 25px;
               padding-bottom: 25px;
               height: 100%; }
-              #header #gnb .wrapper .container > .lg-menu > li > ul > li > a {
+              #header #gnb .wrapper .container > .menu-list > li > ul > li > a {
                 display: block;
                 text-align: center;
                 font-size: 14px;
                 color: #222;
                 line-height: 35px; }
-            #header #gnb .wrapper .container > .lg-menu > li:focus > a, #header #gnb .wrapper .container > .lg-menu > li:hover > a {
+            #header #gnb .wrapper .container > .menu-list > li:focus > a, #header #gnb .wrapper .container > .menu-list > li:hover > a {
               color: #222; }
-            #header #gnb .wrapper .container > .lg-menu > li:focus > ul, #header #gnb .wrapper .container > .lg-menu > li:hover > ul {
+            #header #gnb .wrapper .container > .menu-list > li:focus > ul, #header #gnb .wrapper .container > .menu-list > li:hover > ul {
               background-color: #f1f1f1; }
-              #header #gnb .wrapper .container > .lg-menu > li:focus > ul > li > a, #header #gnb .wrapper .container > .lg-menu > li:hover > ul > li > a {
+              #header #gnb .wrapper .container > .menu-list > li:focus > ul > li > a, #header #gnb .wrapper .container > .menu-list > li:hover > ul > li > a {
                 color: #222; }
-                #header #gnb .wrapper .container > .lg-menu > li:focus > ul > li > a:hover, #header #gnb .wrapper .container > .lg-menu > li:hover > ul > li > a:hover {
+                #header #gnb .wrapper .container > .menu-list > li:focus > ul > li > a:hover, #header #gnb .wrapper .container > .menu-list > li:hover > ul > li > a:hover {
                   color: #d90c1c; }
+
+#nav {
+  position: fixed;
+  top: 0;
+  right: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.6);
+  z-index: 900; }
+  #nav .nav-backdrop {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 100%;
+    height: 100%;
+    z-index: 901; }
+  #nav .nav-container {
+    position: absolute;
+    top: 0;
+    right: 0;
+    width: 80%;
+    height: 100%;
+    background-color: #fff;
+    transition: all .3s;
+    z-index: 910; }
+    #nav .nav-container .nav-content {
+      overflow: scroll;
+      height: 100%; }
+      #nav .nav-container .nav-content .nav-head {
+        width: 100%;
+        position: relative;
+        background-color: #fff; }
+        #nav .nav-container .nav-content .nav-head h1 {
+          width: 134px;
+          text-align: left;
+          padding-left: 22px; }
+          #nav .nav-container .nav-content .nav-head h1 img {
+            display: inline-block;
+            width: 134px; }
+        #nav .nav-container .nav-content .nav-head .btn-nav-close {
+          position: absolute;
+          top: 0;
+          right: 22px; }
+      #nav .nav-container .nav-content .gnb > li {
+        overflow: hidden;
+        border-bottom: 1px solid #dadada; }
+        #nav .nav-container .nav-content .gnb > li > a {
+          display: block;
+          width: 100%;
+          height: 36px;
+          font-size: 13.3px;
+          color: #333;
+          font-weight: 600;
+          line-height: 36px;
+          padding-left: 20px; }
+          #nav .nav-container .nav-content .gnb > li > a:hover, #nav .nav-container .nav-content .gnb > li > a:focus {
+            text-decoration: none; }
+          #nav .nav-container .nav-content .gnb > li > a .glyphicon {
+            float: right;
+            color: #999;
+            line-height: 36px;
+            padding-right: 20px; }
+        #nav .nav-container .nav-content .gnb > li > ul {
+          display: none;
+          padding-top: 10px;
+          padding-bottom: 10px;
+          background-color: #f9f9f9; }
+          #nav .nav-container .nav-content .gnb > li > ul > li > a {
+            display: block;
+            width: 100%;
+            font-size: 12.6px;
+            color: #333;
+            font-weight: 400;
+            line-height: 25px;
+            padding-left: 38.66px; }
+        #nav .nav-container .nav-content .gnb > li.active {
+          border-bottom: 0; }
+          #nav .nav-container .nav-content .gnb > li.active > ul {
+            display: block; }
+            #nav .nav-container .nav-content .gnb > li.active > ul > li a:hover {
+              text-decoration: none; }
+            #nav .nav-container .nav-content .gnb > li.active > ul > li a:focus {
+              text-decoration: none;
+              color: #9f080d; }
+  #nav.collapsed {
+    right: -100%; }
+    #nav.collapsed .nav-container {
+      right: -270px; }
+
+body.nav-opened {
+  position: relative;
+  overflow: hidden;
+  width: 100%;
+  height: 100%; }
 
 /* Footer */
 #footer {
