--- a/assets/css/employment.scss
+++ b/assets/css/employment.scss
@@ -198,7 +198,6 @@
                                     border-top: 2px solid #333;
                                 }
                                 td {
-                                    border-left: 2px solid #fff;
                                     border-top: 2px solid $rc;
                                 }
                             }
@@ -313,7 +312,431 @@
         }
     }
 }
+.recruit {
+    padding-bottom: 40px;
+    div {
+        h4 {
+            font-size: 24px;
+            color: #333;
+            font-weight: 400;
+            margin-top: 70px;
+            margin-bottom: 20px;
+            &:before {
+                content: "·";
+                padding-right: 15px;
+            }
+            small {
+                font-size: 16px;
+                color: #6c6c6c;
+                display: inline-block;
+                margin-left: 18px;
+            }
+        }
+        .table-wrap {
+            .table {
+                border: 0;
+                th {
+                    vertical-align: middle;
+                    text-align: center;
+                    border: 0;
+                    border-bottom: 1px solid #fff;
+                    background-color: #f6f6f6;
+                    font-size: 16px;
+                    font-weight: 400;
+                    color: #333;
+                    lable {
+                        font-size: 16px;
+                        color: #333;
+                        margin-bottom: 0;
+                    }
+                }
+                .thb {
+                    border-bottom: 1px solid #dadada;
+                }
+                .rc-border {
+                    border-top: 2px solid $rc;
+                }
+                .rr-border {
+                    border-top: 2px solid #333;
+                }
+                td {
+                    vertical-align: middle;
+                    border: 0;
+                    border-bottom: 1px solid #dadada;
+                    padding: 5px 30px;
+                    padding-left: 30px;
+                    .form-control {
+                        border-radius: 0;
+                        border: 1px solid #dadada;
+                        width: 100%;
+                        height: 35px;
+                        box-shadow: none;
+                    }
+                    label {
+                        font-size: 16px;
+                    }
+                }
+            }
+            .btn-area {
+                margin-top: 30px;
+                text-align: right;
+                p {
+                    .btn {
+                        width: 120px;
+                        height: 35px;
+                        border-radius: 0;
+                        font-size: 16px;
+                        color: #fff;
+                        display: inline-block;
+                    }
+                    .btn-addition {
+                        background-color: #d90c1c;
+                    }
+                    .btn-del {
+                        background-color: #999;
+                    }
+                }
+            }
+        }
+    }
+    .basics-info {
+        h4 {
+            margin-top: 0;
+        }
+        .table-wrap {
+            .table {
+                tbody {
+                    tr {
+                        th {
 
+                        }
+                        td {
+                            select {
+                                display: inline-block;
+                                width: 90px;
+                                height: 35px;
+                                padding-left: 13px;
+                                font-size: 16px;
+                                border: 1px solid #dadada;
+                            }
+                        }
+                        .birthday {
+                            .form-control {
+                                background-image: url(/assets/images/employment/calendar_btn.gif);
+                                background-repeat: no-repeat;
+                                background-position: 95% 50%;
+                            }
+                        }
+                        .user-name {
+                        }
+                        .sex {
+                            p {
+                                display: inline-block;
+                                .radio {
+                                    display: inline-block;
+                                    vertical-align: middle;
+                                    margin-top: -4px;
+                                    margin-right: 7px;
+                                }
+                                &:first-child {
+                                    margin-right: 30px;
+                                }
+                            }
+                        }
+                        .call {
+                            .form-control {
+                                width: 125px;
+                                display: inline-block;
+                            }
+                        }
+                        .file {
+                            .form-control {
+                                width: 300px;
+                                display: inline-block;
+                            }
+                            .file-btn {
+                                margin-left: 5px;
+                                display: inline-block;
+                                .btn {
+                                    vertical-align: middle;
+                                    width: 100px;
+                                    height: 35px;
+                                    margin-top: -7px;
+                                    font-size: 16px;
+                                    color: #333;
+                                    text-align: center;
+                                    border: 1px solid #a9acb4;
+                                    background-color: #f1f1f3;
+                                }
+                            }
+                        }
+                        .addr {
+                            .form-control {
+                                display: inline-block;
+                                &:nth-of-type(4) {
+                                    margin-top: 5px;
+                                }
+                            }
+                            .addr-input {
+                                width: 125px;
+                            }
+                            .btn-address {
+                                display: inline-block;
+                                margin-bottom: 5px;
+                                margin-left: 5px;
+                                .btn-addr {
+                                    font-size: 16px;
+                                    color: #333;
+                                    height: 34px;
+                                    border: 1px solid #a9acb4;
+                                    background-color: #f1f1f3;
+                                }
+                            }
+                        }
+                        .income {
+                            .form-control {
+                                width: 370px;
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .military {
+        .table-wrap {
+            .table {
+                thead {
+                    tr {
+                        th {
+                            border-bottom: 1px solid #333;
+                            &:first-child {
+                                border-left: 0;
+                            }
+                        }
+                    }
+                }
+                tbody {
+                    td {
+
+                    }
+                    .period {
+                        .form-control {
+                            display: inline-block;
+                            width: 256px;
+                            background-image: url(/assets/images/employment/calendar_btn.gif);
+                            background-repeat: no-repeat;
+                            background-position: 95% 50%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .family {
+        .table-wrap {
+            .table {
+                thead {
+                    tr {
+                        th {
+                            border-bottom: 1px solid #333;
+                            &:first-child {
+                                border-left: 0;
+                            }
+                        }
+                    }
+                }
+                tbody {
+                    td {
+
+                    }
+                    .family-birth {
+                        .form-control {
+                            display: inline-block;
+                            background-image: url(/assets/images/employment/calendar_btn.gif);
+                            background-repeat: no-repeat;
+                            background-position: 95% 50%;
+                        }
+                    }
+                    .cohabit {
+                        text-align: center;
+                        p {
+                            display: inline-block;
+                            &:first-child {
+                                margin-right: 30px;
+                            }
+                            .radio {
+                                display: inline-block;
+                                margin-right: 5px;
+                            }
+                            label {
+
+                            }
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .academic {
+        .table-wrap {
+            .table {
+                thead {
+                    tr {
+                        th {
+                            border-bottom: 1px solid #333;
+                            &:first-child {
+                                border-left: 0;
+                            }
+                        }
+                    }
+                }
+                tbody {
+                    td {
+                        select {
+                            width: 100%;
+                            height: 35px;
+                            font-size: 16px;
+                            padding-left: 13px;
+                            border: 1px solid #dadada;
+                        }
+                    }
+                    .academic-period {
+                        .form-control {
+                            display: inline-block;
+                            width: 147px;
+                            background-image: url(/assets/images/employment/calendar_btn.gif);
+                            background-repeat: no-repeat;
+                            background-position: 95% 50%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .qualifiction {
+        .table-wrap {
+            .table {
+                thead {
+                    tr {
+                        th {
+                            border-bottom: 1px solid #333;
+                            &:first-child {
+                                border-left: 0;
+                            }
+                        }
+                    }
+                }
+                tbody {
+                    td {
+                        select {
+                            width: 100%;
+                            height: 35px;
+                            font-size: 16px;
+                            padding-left: 13px;
+                            border: 1px solid #dadada;
+                        }
+                    }
+                    .acquisition {
+                        .form-control {
+                            display: inline-block;
+                            background-image: url(/assets/images/employment/calendar_btn.gif);
+                            background-repeat: no-repeat;
+                            background-position: 95% 50%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .language {
+        .table-wrap {
+            .table {
+                thead {
+                    tr {
+                        th {
+                            border-bottom: 1px solid #333;
+                            &:first-child {
+                                border-left: 0;
+                            }
+                        }
+                    }
+                }
+                tbody {
+                    td {
+                        select {
+                            width: 100%;
+                            height: 35px;
+                            font-size: 16px;
+                            padding-left: 13px;
+                            border: 1px solid #dadada;
+                        }
+                    }
+                    .enforcement-date {
+                        .form-control {
+                            display: inline-block;
+                            background-image: url(/assets/images/employment/calendar_btn.gif);
+                            background-repeat: no-repeat;
+                            background-position: 95% 50%;
+                        }
+                    }
+                }
+            }
+        }
+    }
+    .self-introduction {
+        .form-control {
+            height: 210px;
+            border-radius: 0;
+            font-size: 16px;
+            color: #6c6c6c;
+        }
+    }
+    .document-attached {
+        margin-bottom: 70px;
+        overflow: hidden;
+        h4 {
+            float: left;
+            margin-right: 30px;
+            margin-bottom: 0;
+        }
+        .form-control {
+            float: left;
+            width: 300px;
+            height: 35px;
+            border-radius: 0;
+            margin-top: 68px;
+        }
+        .file-btn {
+            float: left;
+            margin-top: 68px;
+            margin-left: 5px;
+            .btn {
+                width: 100px;
+                height: 35px;
+                font-size: 16px;
+                color: #333;
+                text-align: center;
+                border: 1px solid #a9acb4;
+                background-color: #f1f1f3;
+            }
+        }
+    }
+    .btn-area {
+        p {
+            .btn-submission {
+                display: block;
+                width: 220px;
+                height: 35px;
+                font-size: 16px;
+                color: #fff;
+                text-align: center;
+                margin: 0 auto;
+                background-color: $rc;
+            }
+        }
+    }
+}
 
 
 
